[package]
name = "proxylite"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
tokio = { version = "=1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[build-dependencies]
winresource = "0.1"
